macro(add_parallel_test test exe nproc)
  add_executable(${exe} ${exe}.F90)
  target_link_libraries(${exe} common)
  if (CMAKE_Fortran_COMPILER_ID MATCHES GNU)
    add_test(${test} cafrun -n ${nproc} ./${exe})
  else()
    add_test(${test} ./${exe})
    if (CMAKE_Fortran_COMPILER_ID MATCHES NAG)
      set_tests_properties(${test} PROPERTIES ENVIRONMENT NAGFORTRAN_NUM_IMAGES=${nproc})
    elseif(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
      set_tests_properties(${test} PROPERTIES ENVIRONMENT FOR_COARRAY_NUM_IMAGES=${nproc})
    endif()
  endif()
  # Don't work?
  #set_tests_properties(${test} PROPERTIES ENVIRONMENT $<$<Fortran_COMPILER_ID:NAG>:NAGFORTRAN_NUM_IMAGES=${nproc}>)
  #set_tests_properties(${test} PROPERTIES ENVIRONMENT $<$<Fortran_COMPILER_ID:Intel>:FOR_COARRAY_NUM_IMAGES=${nproc}>)
  set_tests_properties(${test} PROPERTIES PROCESSORS ${nproc})
endmacro()

add_parallel_test(co_btd_matrix co_btd_matrix_test 4)
